// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Render InputCheckbox with HTML label HTML label 1`] = `
<div>
  <div
    class="survey-question__input-checkbox-group-container"
  >
    <div
      class="survey-question__input-checkbox-input-container"
    >
      <div
        class="label-input-container"
      >
        <input
          class="input-checkbox"
          id="test_first value__input-checkbox__first value"
          name="test_first value"
          type="checkbox"
          value="first value"
        />
        <label
          for="test_first value__input-checkbox__first value"
        >
          <span>
            <div>
              first value
            </div>
          </span>
        </label>
      </div>
    </div>
    <div
      class="survey-question__input-checkbox-input-container checked"
    >
      <div
        class="label-input-container"
      >
        <input
          checked=""
          class="input-checkbox"
          id="test_second value__input-checkbox__second value"
          name="test_second value"
          type="checkbox"
          value="second value"
        />
        <label
          for="test_second value__input-checkbox__second value"
        >
          <span>
            <div>
              second value
            </div>
          </span>
        </label>
      </div>
    </div>
  </div>
</div>
`;

exports[`Render InputCheckbox with minimum parameters Minimum parameters, one value selected 1`] = `
<div>
  <div
    class="survey-question__input-checkbox-group-container"
  >
    <div
      class="survey-question__input-checkbox-input-container checked"
    >
      <div
        class="label-input-container"
      >
        <input
          checked=""
          class="input-checkbox"
          id="test_val1__input-checkbox__val1"
          name="test_val1"
          type="checkbox"
          value="val1"
        />
        <label
          for="test_val1__input-checkbox__val1"
        >
          <span>
            english value
          </span>
        </label>
      </div>
    </div>
    <div
      class="survey-question__input-checkbox-input-container"
    >
      <div
        class="label-input-container"
      >
        <input
          class="input-checkbox"
          id="test_val2__input-checkbox__val2"
          name="test_val2"
          type="checkbox"
          value="val2"
        />
        <label
          for="test_val2__input-checkbox__val2"
        >
          <span>
            Unilingual label
          </span>
        </label>
      </div>
    </div>
  </div>
</div>
`;

exports[`Render InputCheckbox with various parameter combinations, all parameters Conditional value hidden, same line, no value selected 1`] = `
<div>
  <div
    class="survey-question__input-checkbox-group-container"
  >
    <div
      class="survey-question__input-checkbox-input-container"
    >
      <div
        class="label-input-container"
      >
        <input
          class="input-checkbox"
          id="test_val1__input-checkbox__val1"
          name="test_val1"
          type="checkbox"
          value="val1"
        />
        <label
          for="test_val1__input-checkbox__val1"
        >
          <span>
            <svg
              aria-hidden="true"
              class="svg-inline--fa fa-crow faIconLeft"
              data-icon="crow"
              data-prefix="fas"
              role="img"
              style="margin: auto 0px;"
              viewBox="0 0 640 512"
            >
              <path
                d="M456.5 0c-48.6 0-88 39.4-88 88l0 36-355.2 266.4C-.8 401-3.7 421 6.9 435.2s30.6 17 44.8 6.4l76.8-57.6 131.3 0 46.6 113.1 1 2.2c5.7 10.7 18.8 15.5 30.3 10.8s17.3-17.3 13.9-29l-.8-2.3-39.1-94.9 40.9 0c1.1 0 2.2 0 3.2 0l46.6 113.2 1 2.2c5.7 10.7 18.8 15.5 30.3 10.8s17.3-17.3 13.9-29l-.8-2.3-42-102C485.3 354.1 544.5 280 544.5 192l0-72 80.5-20.1c8.6-2.1 13.8-10.8 11.6-19.4-7.1-28.5-32.7-48.5-62.1-48.5l-50.1 0C508.2 12.5 483.8 0 456.5 0zm0 64a24 24 0 1 1 0 48 24 24 0 1 1 0-48z"
                fill="currentColor"
              />
            </svg>
          </span>
          <span>
            english value
          </span>
        </label>
      </div>
    </div>
    <div
      class="survey-question__input-checkbox-input-container"
    >
      <div
        class="label-input-container"
      >
        <input
          class="input-checkbox"
          id="test_val2__input-checkbox__val2"
          name="test_val2"
          type="checkbox"
          value="val2"
        />
        <label
          for="test_val2__input-checkbox__val2"
        >
          <span>
            <img
              alt="Unilingual label"
              class="faIconLeft"
              src="img/test.png"
              style="height: 3em; margin: 0px 0.25em 0px 0px;"
            />
          </span>
          <span>
            Unilingual label
          </span>
        </label>
      </div>
    </div>
    <div
      class="survey-question__input-checkbox-input-container"
    >
      <div
        class="label-input-container"
      >
        <input
          class="input-checkbox"
          id="test_val3__input-checkbox__val3"
          name="test_val3"
          type="checkbox"
          value="val3"
        />
        <label
          for="test_val3__input-checkbox__val3"
        >
          <span>
            Translated string
          </span>
        </label>
      </div>
    </div>
  </div>
</div>
`;

exports[`Render InputCheckbox with various parameter combinations, all parameters Includes hidden values, conditional displayed, no custom, 2 columns, 2 selected values 1`] = `
<div>
  <div
    class="survey-question__input-checkbox-group-container no-wrap"
  >
    <div
      class="survey-question__input-checkbox-group-column"
    >
      <div
        class="survey-question__input-checkbox-input-container checked"
      >
        <div
          class="label-input-container"
        >
          <input
            checked=""
            class="input-checkbox"
            id="test_val1__input-checkbox__val1"
            name="test_val1"
            type="checkbox"
            value="val1"
          />
          <label
            for="test_val1__input-checkbox__val1"
          >
            <span>
              <svg
                aria-hidden="true"
                class="svg-inline--fa fa-crow faIconLeft"
                data-icon="crow"
                data-prefix="fas"
                role="img"
                style="margin: auto 0px;"
                viewBox="0 0 640 512"
              >
                <path
                  d="M456.5 0c-48.6 0-88 39.4-88 88l0 36-355.2 266.4C-.8 401-3.7 421 6.9 435.2s30.6 17 44.8 6.4l76.8-57.6 131.3 0 46.6 113.1 1 2.2c5.7 10.7 18.8 15.5 30.3 10.8s17.3-17.3 13.9-29l-.8-2.3-39.1-94.9 40.9 0c1.1 0 2.2 0 3.2 0l46.6 113.2 1 2.2c5.7 10.7 18.8 15.5 30.3 10.8s17.3-17.3 13.9-29l-.8-2.3-42-102C485.3 354.1 544.5 280 544.5 192l0-72 80.5-20.1c8.6-2.1 13.8-10.8 11.6-19.4-7.1-28.5-32.7-48.5-62.1-48.5l-50.1 0C508.2 12.5 483.8 0 456.5 0zm0 64a24 24 0 1 1 0 48 24 24 0 1 1 0-48z"
                  fill="currentColor"
                />
              </svg>
            </span>
            <span>
              english value
            </span>
          </label>
        </div>
      </div>
      <div
        class="survey-question__input-checkbox-input-container checked"
      >
        <div
          class="label-input-container"
        >
          <input
            checked=""
            class="input-checkbox"
            id="test_val2__input-checkbox__val2"
            name="test_val2"
            type="checkbox"
            value="val2"
          />
          <label
            for="test_val2__input-checkbox__val2"
          >
            <span>
              <img
                alt="Unilingual label"
                class="faIconLeft"
                src="img/test.png"
                style="height: 3em; margin: 0px 0.25em 0px 0px;"
              />
            </span>
            <span>
              Unilingual label
            </span>
          </label>
        </div>
      </div>
    </div>
    <div
      class="survey-question__input-checkbox-group-column"
    >
      <div
        class="survey-question__input-checkbox-input-container"
      >
        <div
          class="label-input-container"
        >
          <input
            class="input-checkbox"
            id="test_conditionalVal__input-checkbox__conditionalVal"
            name="test_conditionalVal"
            type="checkbox"
            value="conditionalVal"
          />
          <label
            for="test_conditionalVal__input-checkbox__conditionalVal"
          >
            <span>
              english conditional
            </span>
          </label>
        </div>
      </div>
      <div
        class="survey-question__input-checkbox-input-container"
      >
        <div
          class="label-input-container"
        >
          <input
            class="input-checkbox"
            id="test_val3__input-checkbox__val3"
            name="test_val3"
            type="checkbox"
            value="val3"
          />
          <label
            for="test_val3__input-checkbox__val3"
          >
            <span>
              Translated string
            </span>
          </label>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Render InputCheckbox with various parameter combinations, all parameters Shuffle choices, one selected value 1`] = `
<div>
  <div
    class="survey-question__input-checkbox-group-container no-wrap"
  >
    <div
      class="survey-question__input-checkbox-group-column"
    >
      <div
        class="survey-question__input-checkbox-input-container checked"
      >
        <div
          class="label-input-container"
        >
          <input
            checked=""
            class="input-checkbox"
            id="test_val2__input-checkbox__val2"
            name="test_val2"
            type="checkbox"
            value="val2"
          />
          <label
            for="test_val2__input-checkbox__val2"
          >
            <span>
              <img
                alt="Unilingual label"
                class="faIconLeft"
                src="img/test.png"
                style="height: 3em; margin: 0px 0.25em 0px 0px;"
              />
            </span>
            <span>
              Unilingual label
            </span>
          </label>
        </div>
      </div>
      <div
        class="survey-question__input-checkbox-input-container"
      >
        <div
          class="label-input-container"
        >
          <input
            class="input-checkbox"
            id="test_conditionalVal__input-checkbox__conditionalVal"
            name="test_conditionalVal"
            type="checkbox"
            value="conditionalVal"
          />
          <label
            for="test_conditionalVal__input-checkbox__conditionalVal"
          >
            <span>
              english conditional
            </span>
          </label>
        </div>
      </div>
    </div>
    <div
      class="survey-question__input-checkbox-group-column"
    >
      <div
        class="survey-question__input-checkbox-input-container"
      >
        <div
          class="label-input-container"
        >
          <input
            class="input-checkbox"
            id="test_val1__input-checkbox__val1"
            name="test_val1"
            type="checkbox"
            value="val1"
          />
          <label
            for="test_val1__input-checkbox__val1"
          >
            <span>
              <svg
                aria-hidden="true"
                class="svg-inline--fa fa-crow faIconLeft"
                data-icon="crow"
                data-prefix="fas"
                role="img"
                style="margin: auto 0px;"
                viewBox="0 0 640 512"
              >
                <path
                  d="M456.5 0c-48.6 0-88 39.4-88 88l0 36-355.2 266.4C-.8 401-3.7 421 6.9 435.2s30.6 17 44.8 6.4l76.8-57.6 131.3 0 46.6 113.1 1 2.2c5.7 10.7 18.8 15.5 30.3 10.8s17.3-17.3 13.9-29l-.8-2.3-39.1-94.9 40.9 0c1.1 0 2.2 0 3.2 0l46.6 113.2 1 2.2c5.7 10.7 18.8 15.5 30.3 10.8s17.3-17.3 13.9-29l-.8-2.3-42-102C485.3 354.1 544.5 280 544.5 192l0-72 80.5-20.1c8.6-2.1 13.8-10.8 11.6-19.4-7.1-28.5-32.7-48.5-62.1-48.5l-50.1 0C508.2 12.5 483.8 0 456.5 0zm0 64a24 24 0 1 1 0 48 24 24 0 1 1 0-48z"
                  fill="currentColor"
                />
              </svg>
            </span>
            <span>
              english value
            </span>
          </label>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Render InputCheckbox with various parameter combinations, all parameters With custom choice, custom checked 1`] = `
<div>
  <div
    class="survey-question__input-checkbox-group-container no-wrap"
  >
    <div
      class="survey-question__input-checkbox-group-column"
    >
      <div
        class="survey-question__input-checkbox-input-container"
      >
        <div
          class="label-input-container"
        >
          <input
            class="input-checkbox"
            id="test_val1__input-checkbox__val1"
            name="test_val1"
            type="checkbox"
            value="val1"
          />
          <label
            for="test_val1__input-checkbox__val1"
          >
            <span>
              <svg
                aria-hidden="true"
                class="svg-inline--fa fa-crow faIconLeft"
                data-icon="crow"
                data-prefix="fas"
                role="img"
                style="margin: auto 0px;"
                viewBox="0 0 640 512"
              >
                <path
                  d="M456.5 0c-48.6 0-88 39.4-88 88l0 36-355.2 266.4C-.8 401-3.7 421 6.9 435.2s30.6 17 44.8 6.4l76.8-57.6 131.3 0 46.6 113.1 1 2.2c5.7 10.7 18.8 15.5 30.3 10.8s17.3-17.3 13.9-29l-.8-2.3-39.1-94.9 40.9 0c1.1 0 2.2 0 3.2 0l46.6 113.2 1 2.2c5.7 10.7 18.8 15.5 30.3 10.8s17.3-17.3 13.9-29l-.8-2.3-42-102C485.3 354.1 544.5 280 544.5 192l0-72 80.5-20.1c8.6-2.1 13.8-10.8 11.6-19.4-7.1-28.5-32.7-48.5-62.1-48.5l-50.1 0C508.2 12.5 483.8 0 456.5 0zm0 64a24 24 0 1 1 0 48 24 24 0 1 1 0-48z"
                  fill="currentColor"
                />
              </svg>
            </span>
            <span>
              english value
            </span>
          </label>
        </div>
      </div>
      <div
        class="survey-question__input-checkbox-input-container"
      >
        <div
          class="label-input-container"
        >
          <input
            class="input-checkbox"
            id="test_val2__input-checkbox__val2"
            name="test_val2"
            type="checkbox"
            value="val2"
          />
          <label
            for="test_val2__input-checkbox__val2"
          >
            <span>
              <img
                alt="Unilingual label"
                class="faIconLeft"
                src="img/test.png"
                style="height: 3em; margin: 0px 0.25em 0px 0px;"
              />
            </span>
            <span>
              Unilingual label
            </span>
          </label>
        </div>
      </div>
      <div
        class="survey-question__input-checkbox-input-container"
      >
        <div
          class="label-input-container"
        >
          <input
            class="input-checkbox"
            id="test_conditionalVal__input-checkbox__conditionalVal"
            name="test_conditionalVal"
            type="checkbox"
            value="conditionalVal"
          />
          <label
            for="test_conditionalVal__input-checkbox__conditionalVal"
          >
            <span>
              english conditional
            </span>
          </label>
        </div>
      </div>
    </div>
    <div
      class="survey-question__input-checkbox-group-column"
    >
      <div
        class="survey-question__input-checkbox-input-container"
      >
        <div
          class="label-input-container"
        >
          <input
            class="input-checkbox"
            id="test_val3__input-checkbox__val3"
            name="test_val3"
            type="checkbox"
            value="val3"
          />
          <label
            for="test_val3__input-checkbox__val3"
          >
            <span>
              Translated string
            </span>
          </label>
        </div>
      </div>
      <div
        class="survey-question__input-checkbox-input-container checked"
      >
        <div
          class="label-input-container"
        >
          <input
            checked=""
            class="input-checkbox"
            id="test_custom__input-checkbox__custom"
            name="test_custom"
            type="checkbox"
            value="custom"
          />
          <label
            for="test_custom__input-checkbox__custom"
          >
            <span>
              Other
            </span>
          </label>
        </div>
      </div>
    </div>
    <div
      class="label-input-custom-container"
    >
      <label
        for="foo.test.custom"
      >
        <span>
          custom label
        </span>
      </label>
      <input
        autocomplete="none"
        class="apptr__form-input input-custom apptr__input-string"
        id="foo.test.custom"
        name="foo.test.custom"
        tabindex="-1"
        type="text"
        value=""
      />
    </div>
  </div>
</div>
`;

exports[`Render InputCheckbox with various parameter combinations, all parameters With custom choice, custom unchecked 1`] = `
<div>
  <div
    class="survey-question__input-checkbox-group-container no-wrap"
  >
    <div
      class="survey-question__input-checkbox-group-column"
    >
      <div
        class="survey-question__input-checkbox-input-container"
      >
        <div
          class="label-input-container"
        >
          <input
            class="input-checkbox"
            id="test_val1__input-checkbox__val1"
            name="test_val1"
            type="checkbox"
            value="val1"
          />
          <label
            for="test_val1__input-checkbox__val1"
          >
            <span>
              <svg
                aria-hidden="true"
                class="svg-inline--fa fa-crow faIconLeft"
                data-icon="crow"
                data-prefix="fas"
                role="img"
                style="margin: auto 0px;"
                viewBox="0 0 640 512"
              >
                <path
                  d="M456.5 0c-48.6 0-88 39.4-88 88l0 36-355.2 266.4C-.8 401-3.7 421 6.9 435.2s30.6 17 44.8 6.4l76.8-57.6 131.3 0 46.6 113.1 1 2.2c5.7 10.7 18.8 15.5 30.3 10.8s17.3-17.3 13.9-29l-.8-2.3-39.1-94.9 40.9 0c1.1 0 2.2 0 3.2 0l46.6 113.2 1 2.2c5.7 10.7 18.8 15.5 30.3 10.8s17.3-17.3 13.9-29l-.8-2.3-42-102C485.3 354.1 544.5 280 544.5 192l0-72 80.5-20.1c8.6-2.1 13.8-10.8 11.6-19.4-7.1-28.5-32.7-48.5-62.1-48.5l-50.1 0C508.2 12.5 483.8 0 456.5 0zm0 64a24 24 0 1 1 0 48 24 24 0 1 1 0-48z"
                  fill="currentColor"
                />
              </svg>
            </span>
            <span>
              english value
            </span>
          </label>
        </div>
      </div>
      <div
        class="survey-question__input-checkbox-input-container"
      >
        <div
          class="label-input-container"
        >
          <input
            class="input-checkbox"
            id="test_val2__input-checkbox__val2"
            name="test_val2"
            type="checkbox"
            value="val2"
          />
          <label
            for="test_val2__input-checkbox__val2"
          >
            <span>
              <img
                alt="Unilingual label"
                class="faIconLeft"
                src="img/test.png"
                style="height: 3em; margin: 0px 0.25em 0px 0px;"
              />
            </span>
            <span>
              Unilingual label
            </span>
          </label>
        </div>
      </div>
      <div
        class="survey-question__input-checkbox-input-container"
      >
        <div
          class="label-input-container"
        >
          <input
            class="input-checkbox"
            id="test_conditionalVal__input-checkbox__conditionalVal"
            name="test_conditionalVal"
            type="checkbox"
            value="conditionalVal"
          />
          <label
            for="test_conditionalVal__input-checkbox__conditionalVal"
          >
            <span>
              english conditional
            </span>
          </label>
        </div>
      </div>
    </div>
    <div
      class="survey-question__input-checkbox-group-column"
    >
      <div
        class="survey-question__input-checkbox-input-container"
      >
        <div
          class="label-input-container"
        >
          <input
            class="input-checkbox"
            id="test_val3__input-checkbox__val3"
            name="test_val3"
            type="checkbox"
            value="val3"
          />
          <label
            for="test_val3__input-checkbox__val3"
          >
            <span>
              Translated string
            </span>
          </label>
        </div>
      </div>
      <div
        class="survey-question__input-checkbox-input-container"
      >
        <div
          class="label-input-container"
        >
          <input
            class="input-checkbox"
            id="test_custom__input-checkbox__custom"
            name="test_custom"
            type="checkbox"
            value="custom"
          />
          <label
            for="test_custom__input-checkbox__custom"
          >
            <span>
              Other
            </span>
          </label>
        </div>
      </div>
    </div>
    <div
      class="label-input-custom-container"
    >
      <label
        for="foo.test.custom"
      >
        <span>
          custom label
        </span>
      </label>
      <input
        autocomplete="none"
        class="apptr__form-input input-custom apptr__input-string"
        id="foo.test.custom"
        name="foo.test.custom"
        tabindex="-1"
        type="text"
        value=""
      />
    </div>
  </div>
</div>
`;
